--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,111 +1,24 @@
-name: Publish Docker image
+name: Build and Publish to Docker
 
 on:
-    workflow_dispatch:
-    push:
-        branches:
-            - main
-    release:
-        types: [published]
-
-env:
-    IMAGE_NAME: ${{ github.event.repository.name }}
-    PLATFORMS: linux/amd64,linux/arm64
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-    push-to-docker-hub:
-        name: Push Docker image to Docker Hub
-        runs-on: ubuntu-latest
-        steps:
-            - name: Check out the repo
-              uses: actions/checkout@v4
-
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: Log in to Docker Hub
-              uses: docker/login-action@v3
-              if: github.event_name != 'pull_request'
-              with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
-
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@v5
-              with:
-                  images: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
-                  tags: |
-                      type=ref,event=branch
-                      type=ref,event=pr
-                      type=semver,pattern={{version}}
-                      type=semver,pattern={{major}}.{{minor}}
-
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v5
-              with:
-                  context: .
-                  push: ${{ github.event_name != 'pull_request' }}
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
-                  platforms: ${{ env.PLATFORMS }}
-
-            - name: Update Docker Hub description
-              uses: peter-evans/dockerhub-description@v4
-              if: github.event_name != 'pull_request'
-              with:
-                  username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.DOCKER_PASSWORD }}
-                  repository: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
-
-    push-to-github-packages:
-        name: Push Docker image to GitHub Packages
-        runs-on: ubuntu-latest
-
-        env:
-            REGISTRY: ghcr.io
-
-        permissions:
-            contents: read
-            packages: write
-
-        steps:
-            - name: Check out the repo
-              uses: actions/checkout@v4
-
-            - name: Set up QEMU
-              uses: docker/setup-qemu-action@v3
-
-            - name: Set up Docker Buildx
-              uses: docker/setup-buildx-action@v3
-
-            - name: Log in to GitHub Packages
-              uses: docker/login-action@v3
-              if: github.event_name != 'pull_request'
-              with:
-                  registry: ${{ env.REGISTRY }}
-                  username: ${{ github.actor }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
-
-            - name: Extract metadata (tags, labels) for Docker
-              id: meta
-              uses: docker/metadata-action@v5
-              with:
-                  images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME }}
-                  tags: |
-                      type=ref,event=branch
-                      type=ref,event=pr
-                      type=semver,pattern={{version}}
-                      type=semver,pattern={{major}}.{{minor}}
-
-            - name: Build and push Docker image
-              uses: docker/build-push-action@v5
-              with:
-                  context: .
-                  push: ${{ github.event_name != 'pull_request' }}
-                  tags: ${{ steps.meta.outputs.tags }}
-                  labels: ${{ steps.meta.outputs.labels }}
-                  platforms: ${{ env.PLATFORMS }}
+  backup:
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Run MongoDB backup with rclone
+        run: |
+          docker run --rm \
+            -e RCLONE_CONFIG="${{ secrets.RCLONE_CONFIG }}"
+            -e MONGO_URI="${{ secrets.MONGO_URI }}" \
+            -e FILENAME="${{ secrets.FILENAME }}" \
+            -e MONGODUMP_ARGS="${{ secrets.MONGODUMP_ARGS }}" \
+            ${{ secrets.IMAGE_NAME }}
