--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,12 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       
+      - name: Create rclone config file
+        run: |
+          mkdir -p ~/.config/rclone
+          echo "${{ secrets.RCLONE_CONFIG }}" > ~/.config/rclone/rclone.conf
+          chmod 600 ~/.config/rclone/rclone.conf
+          echo "Rclone config file created"
+      
       - name: Run MongoDB backup with rclone
-        env:
-          RCLONE_CONFIG: ${{ secrets.RCLONE_CONFIG }}
         run: |
           docker run --rm \
-            -e RCLONE_CONFIG=$RCLONE_CONFIG
+            -v ~/.config/rclone/rclone.conf:/config/rclone/rclone.conf:ro \
             -e MONGO_URI="${{ secrets.MONGO_URI }}" \
             -e FILENAME="${{ secrets.FILENAME }}" \
             -e MONGODUMP_ARGS="${{ secrets.MONGODUMP_ARGS }}" \
